fix: #search was too big and moved personal links too far to the left

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -37,7 +37,7 @@
     background: asset-data-url("search-white.png") no-repeat scroll 0 center transparent;
     border-radius: 6px;
     cursor: pointer;
-    height:2.25em;
+    height:2em;
   }
 
   #search #topterm:focus {
